--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,7 @@
 // reset
-html,body,#app{
-
-    height: 100%;
-   
+html,body,#app{  
+  height:100%;
+  margin:0;
 }
 p {
     margin: 0;
@@ -19,19 +18,23 @@ p {
     border: 0;
   }
   .page {
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    outline: none;
     margin: 0 auto;
     background:url('../assets/bg.jpg');
   }
   .container {
-    min-height: 100vh;
-    padding-bottom: 54px;
-    box-sizing: border-box;
+    height: 100%;
   }
   
   .footer {
-    margin-top: -54px;
-    line-height: 54px;
+    position: absolute;
+    bottom:0;
+    line-height: 30px;
     text-align: center;
+    width:100%;
   }
   
   .fr {
